name:                bookclub
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/xldenis/bookclub#readme
license:             BSD3
license-file:        LICENSE
author:              Xavier Denis
maintainer:          xldenis@gmail.com
copyright:           2016 Xavier Denis
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bookclub
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , http-api-data
                     , megaparsec
                     , wai
                     , http-types
                     , postgresql-simple
                     , mtl
                     , time
                     , warp
                     , bytestring
